lots og jquery and ajax functionalities

--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -15,7 +15,7 @@ body {
   border-left: 5px solid #8c8f91;
   border-right: 5px solid #8c8f91;
   border-bottom: 25px solid #8c8f91;
-  width: 865px; /* subtract 40px from banner width for padding */
+  width: 900px; /* subtract 40px from banner width for padding */
   background: #FFFFFF;
   background-image: url(../gfx/headerbkg.png);
   background-repeat: repeat-x;
@@ -23,9 +23,14 @@ body {
   box-shadow: 3px 3px 15px #d5d5d5;
 }
 #content {
-  float: left;
-  width: 500px;
-  margin: 20px;
+	width: 300px;
+	margin: 20px;
+	height: 300px;
+}
+#contentCatogory{
+	float:left;
+	padding:10px;
+	height: 300px;
 }
 #aside {
   font-size: 0.9em;
